# 2048-number-rush

./: README.md
app/: page.tsx
backend/: CMakeLists.txt  Dockerfile  game_logic.hpp  server.cpp
